--- a/ApplicationBDO/Views/CompanyMySQL/Index.cshtml
+++ b/ApplicationBDO/Views/CompanyMySQL/Index.cshtml
@@ -11,10 +11,10 @@
                 <div class="jarviswidget jarviswidget-color-orange2" id="wid-id-1" data-widget-editbutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                        <a href="@Url.Action("Delete", "CompanyNoSQLLiteDB")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Delete"><i class="fa fa-plus"></i> DELETE </a>
-                        <a href="@Url.Action("Update", "CompanyNoSQLLiteDB")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Update"><i class="fa fa-plus"></i> UPDATE </a>
-                        <a href="@Url.Action("Select", "CompanyNoSQLLiteDB")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Select"><i class="fa fa-plus"></i> SELECT </a>
-                        <a href="@Url.Action("Insert", "CompanyNoSQLLiteDB")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Insert"><i class="fa fa-plus"></i> INSERT </a>
+                        <a href="@Url.Action("Delete", "CompanyMySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Delete"><i class="fa fa-plus"></i> DELETE </a>
+                        <a href="@Url.Action("Update", "CompanyMySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Update"><i class="fa fa-plus"></i> UPDATE </a>
+                        <a href="@Url.Action("Select", "CompanyMySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Select"><i class="fa fa-plus"></i> SELECT </a>
+                        <a href="@Url.Action("Insert", "CompanyMySQL")" class="btn bg-color-orange2 txt-color-white float-right" rel="tooltip" data-original-title="Insert"><i class="fa fa-plus"></i> INSERT </a>
                     </header>
                     <div>
                         <div class="jarviswidget-editbox">
