--- a/ApplicationBDO/Views/Shared/_Menu.cshtml
+++ b/ApplicationBDO/Views/Shared/_Menu.cshtml
@@ -15,25 +15,25 @@
             </li>
             <li>
                 <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-user"></i> <span class="menu-item-parent">Sql-MSSQLExpress</span></a>
-                <ul style="@Html.MenuChildOpenIf("CompanySQLMSSQLExpress")">
+                <ul style="@Html.MenuChildOpenIf("CompanyMSSQLExpress")">
                     <li>
-                        <a href="@Url.Action("Index", "CompanySQLMSSQLExpress")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file</span></a>
+                        <a href="@Url.Action("Index", "CompanyMSSQLExpress")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file</span></a>
                     </li>
                 </ul>
             </li>
             <li>
                 <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-user"></i> <span class="menu-item-parent">Sql-MySQL</span></a>
-                <ul style="@Html.MenuChildOpenIf("CompanySQLMySQL")">
+                <ul style="@Html.MenuChildOpenIf("CompanyMySQL")">
                     <li>
-                        <a href="@Url.Action("Index", "CompanySQLMySQL")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file</span></a>
+                        <a href="@Url.Action("Index", "CompanyMySQL")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file</span></a>
                     </li>
                 </ul>
             </li>
             <li>
                 <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-user"></i> <span class="menu-item-parent">Sql-SQLite</span></a>
-                <ul style="@Html.MenuChildOpenIf("CompanySQLSQLLite")">
+                <ul style="@Html.MenuChildOpenIf("CompanySQLLite")">
                     <li>
-                        <a href="@Url.Action("Index", "CompanySQLSQLite")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file</span></a>
+                        <a href="@Url.Action("Index", "CompanySQLite")"><i class="fa fa-lg fa-fw fa-building"></i> <span class="menu-item-parent">Load file</span></a>
                     </li>
                 </ul>
             </li>
@@ -55,9 +55,9 @@
             </li>
             <li>
                 <a href="#" title="Dashboard"><i class="fa fa-lg fa-fw fa-fw fa-users"></i> <span class="menu-item-parent">NoSql-LiteDB</span></a>
-                <ul style="@Html.MenuChildOpenIf("CompanyNoSQLLiteDB")">
+                <ul style="@Html.MenuChildOpenIf("CompanyNoSQLiteDB")">
                     <li>
-                        <a href="@Url.Action("Index", "CompanyNoSQLLiteDB")"><i class="fa fa-lg fa-fw fa-file-code-o"></i> <span class="menu-item-parent">Load file</span></a>
+                        <a href="@Url.Action("Index", "CompanyNoSQLiteDB")"><i class="fa fa-lg fa-fw fa-file-code-o"></i> <span class="menu-item-parent">Load file</span></a>
                     </li>
                 </ul>
             </li>
